<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="#ff3f3f3f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first1"
        android:id="@+id/textView16"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp" />

    <TextView
        android:textColor="#ff3f3f3f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first2"
        android:id="@+id/textView17"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textColor="#ff3f3f3f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first3"
        android:id="@+id/textView18"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true" />


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageView3"
        android:src="@drawable/nomal"
        android:layout_below="@+id/textView18"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:id="@+id/imageView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:src="@drawable/firstbanner" />

    <TextView
        android:textColor="#ffffff"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="1"
        android:id="@+id/textView21"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>