<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFAE1"
    android:orientation="vertical">

    <TextView
        android:typeface="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|"
        android:id="@+id/bar"
        android:layout_marginBottom="33dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:textColor="#3C3D3D"
        android:singleLine="true" />

    <Button
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:background="@drawable/firstselector"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/button1"
        android:id="@+id/yes"
        android:layout_alignBottom="@+id/bar"
        android:layout_toLeftOf="@+id/bar"
        android:layout_toStartOf="@+id/bar"
        android:textColor="#ffffb135"
        android:textSize="22dp" />

    <Button
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:background="@drawable/firstselector"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/button2"
        android:id="@+id/no"
        android:layout_alignBottom="@+id/bar"
        android:layout_toRightOf="@+id/bar"
        android:layout_toEndOf="@+id/bar"
        android:textColor="#ffffb135"
        android:textSize="22dp" />

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text6"
        android:id="@+id/textView8"
        android:layout_marginTop="41dp"
        android:textColor="#3C3D3D"
        android:layout_below="@+id/relativeLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_width="55dp"
        android:layout_height="24dp"
        android:id="@+id/track"
        android:background="@drawable/offtrack"
        android:scaleType="fitStart"
        android:layout_alignBottom="@+id/textView8"
        />

    <ImageView
        android:layout_margin="2dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/marking"
        android:background="@drawable/marking"
        android:layout_alignTop="@+id/track"
        android:layout_alignLeft="@+id/track"
        android:layout_alignStart="@+id/track" />

    <ImageView
        android:visibility="gone"
        android:layout_margin="2dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/markingsub"
        android:background="@drawable/marking"
        android:layout_alignTop="@+id/track"
        android:layout_alignRight="@+id/track"
        android:layout_alignEnd="@+id/track" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#444344"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Setting"
            android:textColor="#C4C4C4"
            android:textSize="25dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>



    <ImageButton
        android:layout_width="55dp"
        android:layout_height="24dp"
        android:id="@+id/imageButton"
        android:background="@drawable/selector1"
        android:layout_below="@+id/track"
        android:layout_alignLeft="@+id/track"
        android:layout_alignStart="@+id/track"
        android:layout_marginTop="32dp"
        android:visibility="gone" />

    <TextView
        android:textSize="13dp"
        android:textColor="#3C3D3D"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="확인"
        android:id="@+id/textView13"
        android:layout_alignTop="@+id/imageButton"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton"
        android:visibility="gone" />


</RelativeLayout>